Polish docs build setup