@@ -36,8 +36,6 @@ tasks {
     listOf(jar, javadocJar, sourcesJar).forEach { it { enabled = false } }
 
     val copyJavadoc by registering(Copy::class) {
-        // https://docs.gradle.org/7.0/userguide/validation_problems.html#implicit_dependency
-        // TODO: https://docs.gradle.org/current/userguide/cross_project_publications.html
         from(project(":cxf-codegen-gradle").tasks.javadoc)
         into("$buildDir/docs/api")
     }
@@ -51,6 +49,13 @@ tasks {
             "current-gradle-version" to GradleVersion.current().version,
             "outdir" to outputDir.absolutePath
         ))
+        forkOptions {
+            // To avoid warning, see https://github.com/asciidoctor/asciidoctor-gradle-plugin/issues/597
+            jvmArgs(
+                "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED",
+                "--add-opens", "java.base/java.io=ALL-UNNAMED"
+            )
+        }
     }
 
     build {
